<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF6E5"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/box" />

            <TextView
                android:id="@+id/todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/todo"
                android:textColor="#F38BA0"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="91dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/to_do_list"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"/>
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/anaheim"
        android:text="@string/text"
        android:textSize="19sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_marginTop="5dp"
        android:background="#FFBCBC" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:entries="@array/spinnerItems"
        android:layout_marginTop="5dp"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anaheim"
            android:text="@string/tasks"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#F38BA0"
            android:layout_marginLeft="7dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:srcCompat="@drawable/textbox"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="#F2BEA0"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#F38BA0"
            android:layout_marginTop="5dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnadd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="13dp"
            android:backgroundTint="@color/colour_button"
            android:textColor="#B5EAEA"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btndelete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="13dp"
            android:backgroundTint="@color/colour_button"
            android:textColor="#B5EAEA"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"/>

        <Button
            android:id="@+id/btnclear"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="13sp"
            android:backgroundTint="#F38BA0"
            android:textColor="#B5EAEA"
            android:textStyle="bold"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>